--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://muhammad-usama-aleem.github.io/shiptivitas-1",
+  "homepage": "https://muhammad-usama-aleem.github.io/shiptivitas-1",
   "name": "yc-task1",
   "version": "0.1.0",
   "engines": {
